cmake_minimum_required (VERSION 2.6)
project (chopserver)
set(GCC_COVERAGE_COMPILE_FLAGS "-g -Werror -Wall")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
set(CMAKE_C_FLAGS_RELEASE  "${CMAKE_C_FLAGS_RELEASE} -DRELEASE")
add_executable(chopserver src/chopserver.c src/chopconn.c src/chopconst.c src/chopdata.c src/chopdebug.c src/choppacket.c src/chopsocket.c)
add_executable(chopclient src/chopclient.c src/chopconn.c src/chopconst.c src/chopdata.c src/chopdebug.c src/choppacket.c src/chopsocket.c)
